--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,5 +15,8 @@
       <br>
       <input type="submit" value="Submit">
     </form>
+    <div id="productsTable">
+
+    </div>
   </body>
 </html>
